--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -502,6 +502,8 @@ body {
 .footer {
   min-height: 100px;
   clear: both;
+  position: relative;
+  z-index: 3;
   padding-top: 48px;
 }
 
